eck-llm/fleet-non-ssl/ingress-es-ts.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-transport
spec:
  type: LoadBalancer
  selector:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
  ports:
    - protocol: TCP
      port: 9300
      targetPort: 9300
