eck-llm/fleet-non-ssl/ingress-am.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: apm.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apm-server-apm-http
            port:
              number: 8200
