eck-llm/fleet-non-ssl/ingress-fleet.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: fleet.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fleet-server-agent-http
            port:
              number: 8220
